--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "ext-gd": "^0.0.0",
+        "ext-gd": "*",
         "laravel/framework": "5.4.*",
         "laravel/socialite": "^3.3",
         "laravel/tinker": "~1.0"
